--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
